istio/digistore-frontend-ms/digistore-frontend-ms-k8-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: digistore-frontend-ms
  name: digistore-frontend-ms
spec:
  ports:
  - protocol: TCP
    name: "80"
    port: 80
    targetPort: 80
  selector:
    app: digistore-frontend-ms
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: digistore-frontend-ms
  name: digistore-frontend-ms
spec:
  selector:
    matchLabels:
      app: digistore-frontend-ms
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: digistore-frontend-ms
    spec:
#      initContainers:
#      - name: init-container
#        image: byrnedo/alpine-curl
#        command:
#        - sh
#        - -c
#        - 'while true ; do curl -s curl http://digistore-product-ms:80/product/actuator/info -m 3 | grep -i \{\} | grep -iv red > /dev/null ; if [ `echo $?` -eq 0 ] ; then exit 0; fi; echo "Waiting for BE to come up..." ; sleep 20 ; sleep 20 ; done '
      containers:
      - name: digistore-frontend-ms
        image: siddhivinayaksk/digistore-frontendms:0.0.1
        command: ["ng"]
        args: ["serve", "--port", "80", "--host", "0.0.0.0", "--disable-host-check"]

        imagePullPolicy: "Always"
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "250m"
            memory: "900Mi"
          requests:
            cpu: "100m"
            memory: "90Mi"
      restartPolicy: Always
status: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: digistore-product-ms-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: www.acg-digistore.com
    http:
      paths:
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: digistore-product-ms
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: digistore-frontend-ms
            port:
              number: 80
  - http:
      paths:
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: digistore-product-ms
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: digistore-frontend-ms
            port:
              number: 80
